spacing fix and add workspace

--- a/issue-005/sass/abstract/_helpers.scss
+++ b/issue-005/sass/abstract/_helpers.scss
@@ -67,6 +67,13 @@
   padding:0;
 }
 
+.video-margin {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 4em;
+    margin-bottom: 4em;
+}
+
 #itp_disclaimer {
   display: none !important;
 }
